--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "nodemon src/server.js",
     "init-db": "node src/db/init-user.js && node src/db/init-school.js && node src/db/init-program.js && node src/db/init-semester.js && node src/db/init-student.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-  }, 
- "keywords": [],
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
@@ -22,7 +22,9 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "pg": "^8.14.1"
+    "multer": "^1.4.5-lts.2",
+    "pg": "^8.14.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
